// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSkeletonCircle is rendered 1`] = `
<div
  aria-busy="true"
  aria-label="aria-label"
  class="euiSkeletonCircle testClass1 testClass2 emotion-euiSkeletonGradientAnimation-euiSkeletonCircle-l"
  data-test-subj="test subject string"
  role="progressbar"
/>
`;

exports[`EuiSkeletonCircle size l 1`] = `
<div
  aria-busy="true"
  aria-label="Loading"
  class="euiSkeletonCircle emotion-euiSkeletonGradientAnimation-euiSkeletonCircle-l"
  role="progressbar"
/>
`;

exports[`EuiSkeletonCircle size m 1`] = `
<div
  aria-busy="true"
  aria-label="Loading"
  class="euiSkeletonCircle emotion-euiSkeletonGradientAnimation-euiSkeletonCircle-m"
  role="progressbar"
/>
`;

exports[`EuiSkeletonCircle size s 1`] = `
<div
  aria-busy="true"
  aria-label="Loading"
  class="euiSkeletonCircle emotion-euiSkeletonGradientAnimation-euiSkeletonCircle-s"
  role="progressbar"
/>
`;

exports[`EuiSkeletonCircle size xl 1`] = `
<div
  aria-busy="true"
  aria-label="Loading"
  class="euiSkeletonCircle emotion-euiSkeletonGradientAnimation-euiSkeletonCircle-xl"
  role="progressbar"
/>
`;
